Business lite Changelog

****************************

Version 3.0.6 (04-03-12)
-Added Romanian language files.
-Updated business.pot.
-Changed <!--more--> link text to "Read more…".

Version 3.0.5 (03-28-12)
-Fixed default slide image proportion. 
-Fix for Google Font library call for SSL compatibility. 
-Cleaned up some translation functions.
-Updated business.pot.
-Added Croatian language files.

Version 3.0.4 (03-22-12)
-Fixed blank space in licensing folder name causing update issues.
-Removed link underlines from post byline.
-Fixed broken third slide link on Front Page.
-Re-added opt-in PressTrends option.

Version 3.0.3 (03-18-12)
-Added French translation files.
-Added option to disable slider navigation arrows. 
-Updated search template code.

Version 3.0.2 (03-13-12)
-Fixed bug with archive template. 
-Widgetized Box element bug fix.

Version 3.0.1 (03-08-12)
-Removed PressTrends function.
-Fixed bug where slider height doesn't resize correctly.
-Removed some unecessary CSS and scripts.
-Conditional to not display breadcrumb links on attachment pages. 
-Fixed fatal error on pages. 

Version 3.0 (03-07-12)
-Moved to CyberChimps Response Core Framework based codebase.
-Moved to Foundation Responsive CSS grid.
-Added Slider, Callout and Widgetized Boxes Page Elements.
-Added Front Page template.
-Added Templates Theme Options.
-Added localization support with built-in support for German, Dutch and Portuguese. 

Version 2.1.2 (01-05-12)
-Fixed broken upgrade link.

Version 2.1.1 (12-12-11)
-Visual fix to theme options for WordPress 3.3 compatibility. 
-Fixed jQuery call for WordPress 3.3 compatibility. 

Version 2.1 (11-02-11)
-Cleaned up HTML element styling.
-Removed extra display of comments from index.
-Added post page links to index. 
-Removed border on sidebar, added bottom border to posts instead. 
-Changed font family to websafe Arial, Helvetica, serif. 
-Fixed image alignment issue.
-Added breadcrumb support. 

Version 2.0.1 (9-8-11)