@@ -3,9 +3,13 @@ Business lite Changelog
 ****************************
 
 Version 3.0.6 (04-03-12)
+-Unidentified index error fix for meta box code. 
 -Added Romanian language files.
 -Updated business.pot.
 -Changed <!--more--> link text to "Read more…".
+-Removed height: auto from objects.
+-Fixed bug with archive of an empty category.
+-Adjusted "viewport" initial scale for full-width mobile device view.  
 
 Version 3.0.5 (03-28-12)
 -Fixed default slide image proportion. 
